Fixed child footer spacing

--- a/css/style-override.css
+++ b/css/style-override.css
@@ -58,7 +58,7 @@ section.portfolio-page img:first-child { /* Limits styling to only sections give
     position: sticky!important; /* Makes portfolio text stay fixed while images scroll */
     top: 0;
   }
-  section.portfolio-page h1 {
+  section.color-bar h1 {
     
   }
 }
@@ -89,7 +89,7 @@ section.portfolio-page img:first-child { /* Limits styling to only sections give
 section.portfolio-page h1 {
   padding-bottom: 1em;
   padding-top: 1.5em; 
-  padding-left: 1.7em;
+  padding-left: 1.6em;
   padding-right: 0;
   text-align: left;
   background-color: turquoise;
@@ -113,7 +113,7 @@ section.portfolio-page h1 {
 
 .stickyfooter{
   top: 0;
-  margin-top: 6em;
+  margin-top: 5em;
 }
 
 /* Body text*/
@@ -143,16 +143,8 @@ section.portfolio-page .sticky-div > p:first-child{
 
 /*Footer*/
 
-section.portfoliopage > .footer {
-  margin-top: 1em;
-}
-
-#footerchild {
-  margin-top: 4em;
-  margin-bottom: 0;
-}
-
-#footerparent {
-  margin-top: 2em;
-  margin-bottom:2em;
+#childfooter{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin: 0.4rem;
 }
